# PwP

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg  setup.py
examples/: demo.py  quickstart.py
pwp_bench/: README.md  setup_benchmark.py
pwp_bench/ChartMimic/: .gitignore  Dockerfile  data.jsonl  first_time.sh
pwp_bench/ChartMimic/setup_files/: eval.py  setup.py  setup.sh  start.sh
pwp_bench/DSBench/: .gitignore  Dockerfile  eval.Dockerfile  first_time.sh
pwp_bench/DSBench/setup_files/: eval.py  setup.py  setup.sh
pwp_bench/DSBench_Anyl/: Dockerfile  data.json  first_time.sh
pwp_bench/DSBench_Anyl/setup_files/: eval.py  setup.py  setup.sh
pwp_bench/VSCode/: Dockerfile  data.jsonl  first_time.sh
pwp_bench/VSCode/setup_files/: eval.py  setup.py
pwp_bench/bird/: .gitignore  Dockerfile  first_time.sh
pwp_bench/bird/setup_files/: eval.py  setup.py  setup.sh  start.sh
pwp_bench/canitedit/: Dockerfile  data.json  first_time.sh  requirements.txt
pwp_bench/canitedit/all_files/: after_0.py  after_1.py  after_10.py  after_100.py  after_101.py  after_102.py  after_103.py  after_104.py  after_11.py  after_12.py  after_13.py  after_14.py  after_15.py  after_16.py  after_17.py  after_18.py  after_19.py  after_2.py  after_20.py  (+88 more)
pwp_bench/design2code/: .gitignore  Dockerfile  data.json  first_time.sh  translate_to_images.py
pwp_bench/human-eval/: Dockerfile  eval.Dockerfile  first_time.sh
pwp_bench/intercode/: ctf.Dockerfile  first_time.sh
pwp_bench/resq/: Dockerfile  first_time.sh  requirements.txt
src/pwp/: README.md  cli.py
(+25 files in other folders)
